// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with Icon props 1`] = `
Object {
  "children": <React.Fragment />,
  "colorMode": "default",
  "height": NaN,
  "icon": "info-circle",
  "size": "200",
  "style": Array [
    Object {
      "color": "#000000",
    },
  ],
  "viewBox": "0 0 0 0",
  "width": NaN,
}
`;

exports[`overrides Icon.base should render correctly 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":32,\\"minWidth\\":32,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="32"
  icon="info-circle"
  overrides="[object Object]"
  size="500"
  viewBox="0 0 512 512"
  width="32"
>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`overrides Icon.iconSets should render correctly 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="solid-arrow-left"
  overrides="[object Object]"
  size="200"
  viewBox="0 0 0 0"
  width="16"
/>
`;

exports[`props should render correctly 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="info-circle"
  size="200"
  viewBox="0 0 512 512"
  width="16"
>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`props should render correctly for custom icon 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="[object Object]"
  size="200"
  viewBox="0 0 16 16"
  width="16"
>
  <path
    d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`props should render correctly for direct import 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="[object Object]"
  size="200"
  type="font-awesome"
  viewBox="0 0 576 512"
  width="16"
>
  <path
    d="M320 33.9c-10.5-1.2-21.2-1.9-32-1.9-99.8 0-187.8 50.8-239.4 128H320V33.9zM96 192H30.3C11.1 230.6 0 274 0 320h96V192zM352 39.4V160h175.4C487.2 99.9 424.8 55.9 352 39.4zM480 320h96c0-46-11.1-89.4-30.3-128H480v128zm-64 64v96h128c17.7 0 32-14.3 32-32v-96H411.5c2.6 10.3 4.5 20.9 4.5 32zm32-192H128v128h49.8c22.2-38.1 63-64 110.2-64s88 25.9 110.2 64H448V192zM0 448c0 17.7 14.3 32 32 32h128v-96c0-11.1 1.9-21.7 4.5-32H0v96zm288-160c-53 0-96 43-96 96v96h192v-96c0-53-43-96-96-96z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`props should render correctly with a label 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="info-circle"
  label="Information"
  size="200"
  viewBox="0 0 512 512"
  width="16"
>
  <title>
    Information
  </title>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`props should render correctly with a size 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\",\\"fontSize\\":24}]]"
  height="16"
  icon="info-circle"
  size="200"
  viewBox="0 0 512 512"
  width="16"
>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`props should render correctly with color prop 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#574feb\\"}]]"
  height="16"
  icon="info-circle"
  size="200"
  viewBox="0 0 512 512"
  width="16"
>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="#574feb"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`theming Icon.base should render correctly 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"height\\":32,\\"width\\":32,\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="info-circle"
  size="200"
  viewBox="0 0 512 512"
  width="16"
>
  <path
    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
    fill="#212121"
    fill-rule="evenodd"
  />
</svg>
`;

exports[`theming Icon.iconSets should render correctly 1`] = `
<svg
  colorMode="default"
  data-style="[{\\"minHeight\\":16,\\"minWidth\\":16,\\"position\\":\\"relative\\"},[{\\"color\\":\\"#212121\\"}]]"
  height="16"
  icon="solid-arrow-left"
  size="200"
  viewBox="0 0 0 0"
  width="16"
/>
`;
